--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         <h1>Generate a <span><br>random password</span></h1>
         <p>Never use an insecure password again</p>
         <section>
-            <button id="generate-btn"><i class="fa-solid fa-key"></i> Generate Password</button>
-        </section> 
-        <div>
+            <button id="generate-btn"><i class="fa-solid fa-key"></i> Generate Password</button>     <div>
             <fieldset>
                 <legend>Select password preferences</legend>
                 <div id="options-mssg">Please select at least one option</div>
@@ -27,18 +25,19 @@
                 <div><span class="message" id="error"></span></div>                 
                 <div class="checkboxes">
                   <input type="checkbox" id="upper" name="option" value="upper" />
-                  <label for="upperCase">Upper Case</label>
+                  <label for="upper">Upper Case</label>
             
                   <input type="checkbox" id="lower" name="option"  value="lower" />
-                  <label for="lowerCase">Lower Case</label>
+                  <label for="lower">Lower Case</label>
             
                   <input type="checkbox" id="number" name="option"  value="numbers"  />
-                  <label for="numbers">Numbers</label>
+                  <label for="number">Numbers</label>
 
                   <input type="checkbox" id="symbol" name="option"  value="symbols" />
-                  <label for="symbols">Symbols</label>
+                  <label for="symbol">Symbols</label>
                 </div>
-            </fieldset>                      
+            </fieldset>
+        </section>                       
         </div>
         <div class="flex-container">
             <div class="flex-child">
